--- a/presen201410.md
+++ b/presen201410.md
@@ -3,66 +3,101 @@
 
 ---
 #今日話すこと
-* CoreOSのcloud-configは良い
-* Vultr/DigitalOceanは安くて良い
-* 動かそう！
-    * 購入~サーバー起動までやるアプリ書いた
-    * ipxe/cloud-configの流れ
-    * Jenkins動かそう！
-
-    * Nginx動かそう！
-    * Rails動かそう！
-
----
-#今日話すこと
 * 貧者だけどCI環境ほしい
 * 貧者なのでお金払いたくない
-* Jenkinsたてたrecipeは残したい
+* Jenkinsたてたcodeは残したい
     * Inflastracture as a Code
-* そこでCoreOS
+    * そこでCoreOS
+* 自作ツールのご紹介
 
 ---
-#貧者の、おうちでの問題意識
+#(会社ではなく)貧者の問題意識
 * おうちでプログラミングしてますか？
 * おうちでCIできますか？
 
 ---
-#貧者はアレがない
+#おうちにはアレがない
 * サーバー
 * 上記を置くスペース
 * 上記に対する家族の理解
 
 ---
-#貧者はアレがない
+#おうちにはアレがない
 * メモリ
 ![100%](https://i.gyazo.com/84b91b8f05fbd08d5967a425378110da.png)
 * VirtualBoxとか嫌なんや
 
 ---
-#貧者はアレがない
+#おうちにはアレがない
 * お金
 
 ---
-# Platforms
+# CI Platforms
 * circleci.com($20)
+    * 論外
 * travis.com($60)
+    * 論外
 * wercker.com(beta, $0)
+    * 抱いて ////
+    * けどbeta(いつか有料?)
 
 ---
-# Platforms
-* (wercker良さそうですね)
-* (けどそれじゃ面白くないし)
-* JenkinsをVPSに立てたいです
-* Chefでプロビジョンがんばる? いやいや
+# CI Platforms(考察)
+* wercker良さそうですね
+    * けどそれじゃ面白くないし
+* やっぱVPSにJenkinsを立てよう
+    * 修羅
 
 ---
-#CoreOS良い
+# Jenkinsたてたcodeは残したいんや
+* CoreOS の cloud-configよさそう
+* インスタンスの初期設定をyamlで書ける
+
+---
+
+![100%](https://i.gyazo.com/6a3c3d5cb44c06a261ff3ec4eeb4ca3d.png)
+
+---
+# cloud-config
+* 最小ではこんな感じ
+* これでsshできるdockerインスタンスが手に入る
+
+```
+#cloud-config
+
+coreos:
+  update:
+    reboot-strategy: etcd-lock
+users:
+  - name: hoshinotsuyoshi
+    coreos-ssh-import-github: hoshinotsuyoshi
+    groups:
+      - sudo
+      - docker
+
+```
+
+
+
+---
+# CoreOSについて
+* fleet(Cluster Manamgement)
+* etcd(Service Discovery)
+* systemd(init.d代替)
+* docker(コンテナ仮想化)
+
+---
+
+![100%](https://i.gyazo.com/f050b5ea938c6859b05e7e01362ecf03.png)
+
+---
+# CoreOSについて
 * systemd
 * コンテナ内で全てを動かす
 * つまり
 
 ---
-![250%](https://i.gyazo.com/5735922e586153a2c3773cc8371bcac3.png)
+![350%](https://i.gyazo.com/5735922e586153a2c3773cc8371bcac3.png)
 
 ---
 #CoreOS良い
