--- a/presen201410.md
+++ b/presen201410.md
@@ -11,8 +11,7 @@
 * 自作ツールのご紹介
 
 ---
-#(会社ではなく)貧者の問題意識
-* おうちでプログラミングしてますか？
+#おうちでの問題
 * おうちでCIできますか？
 
 ---
@@ -46,7 +45,13 @@
 * wercker良さそうですね
     * けどそれじゃ面白くないし
 * やっぱVPSにJenkinsを立てよう
-    * 修羅
+    * 修羅の道へ
+
+---
+# 修羅の道だが、1つの切なる願い
+* Jenkinsたてたcodeは残したいんや
+* Inflastracture as a Code
+* さくっとやりたい
 
 ---
 # Jenkinsたてたcodeは残したいんや
@@ -58,16 +63,10 @@
 ![100%](https://i.gyazo.com/6a3c3d5cb44c06a261ff3ec4eeb4ca3d.png)
 
 ---
-# cloud-config
-* 最小ではこんな感じ
-* これでsshできるdockerインスタンスが手に入る
-
+# CoreOSのcloud-config
 ```
 #cloud-config
 
-coreos:
-  update:
-    reboot-strategy: etcd-lock
 users:
   - name: hoshinotsuyoshi
     coreos-ssh-import-github: hoshinotsuyoshi
@@ -76,37 +75,110 @@ users:
       - docker
 
 ```
+* 最小ではこんな感じ!
+* これでsshできるdockerインスタンスが手に入る!
+* `coreos-ssh-import-github`べんり
 
+---
+# CoreOSについて
 
+![100% inline](https://i.gyazo.com/f050b5ea938c6859b05e7e01362ecf03.png)
 
 ---
 # CoreOSについて
 * fleet(Cluster Manamgement)
 * etcd(Service Discovery)
-* systemd(init.d代替)
-* docker(コンテナ仮想化)
+* systemd(init.d代替, RHEL7から載る)
+* docker(コンテナ仮想化のアレ)
+
+↑普通はfleet/etcdが重要ですが、、
+今日はsystemd/dockerについてのみ
+
+---
+# systemd/dockerでどう動かすの?
+* CoreOSのサイトの例で説明
+* https://coreos.com/docs/launching-containers/launching/getting-started-with-systemd/
 
 ---
 
-![100%](https://i.gyazo.com/f050b5ea938c6859b05e7e01362ecf03.png)
+![80% inline](https://i.gyazo.com/8163167cffe107b9795b3bc8dab91f10.png)
 
 ---
-# CoreOSについて
-* systemd
+## Apache httpd service例
+
+![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+
+### 簡便のためetcd関連は削除しています
+
+---
+## Apache httpd service例
+
+![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+
+## Description : systemctlコマンドを打った時に出てくるサービスの説明
+## After: なんのサービスが起動した後にこのサービスが起動するか
+
+---
+## Apache httpd service例
+
+![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+
+## TimeoutStartSec : タイムアウト。0はタイムアウトしない。
+
+---
+## Apache httpd service例
+
+![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+
+## ExecStartPre : ExecStartの前に実行される。
+## 上記例ではコンテナ名「apache1」をkillし、削除(rm)し、
+## docker public repoからイメージ"coreos/apache"をpullする
+## `=-`すると終了コードが0以外でも失敗とみなさない
+
+---
+## Apache httpd service例
+
+![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+
+## ExecStart : メインのコマンド。 "systemctl start サービス名" で実行される
+## 上記例ではイメージ「coreos/apache」をコンテナ名「apache1」でrunし、
+## コンテナの中の話なのでFOREGROUNDを指定している
+
+---
+## Apache httpd service例
+
+![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+
+## ExecStop : ストップするときのコマンド。 "systemctl stop サービス名" で実行される
+
+---
+## これをcloud-configに貼っつければええ!
+```
+  units:
+    - name: httpd.service # 適当に名付ける　
+      command: start
+      runtime: no
+      content: |
+        [Unit]
+        (...前のページの内容をペースト)
+```
+---
+# CoreOS良い
+* aptとかyumとかなくてもサービス動く
 * コンテナ内で全てを動かす
 * つまり
 
 ---
-![350%](https://i.gyazo.com/5735922e586153a2c3773cc8371bcac3.png)
+![350% inline](https://i.gyazo.com/5735922e586153a2c3773cc8371bcac3.png)
 
 ---
-#CoreOS良い
-*「すべてのぶき／ぼうぐがそうびできる」
+# CoreOS良い
+* すべてのぶき／ぼうぐがそうびできる」
 * ボス戦向け(本気)っぽい
 * すっぴん感あるだけに消費メモリも少ない
 
 ---
-#CoreOS良い
+# CoreOS良い
 
 ```
 $ free -h
@@ -117,43 +189,58 @@ Swap:           0B         0B         0B
 ```
 
 ---
-#CoreOS良い
+#CoreOS良い ここまでのまとめ
 ![100%](https://i.gyazo.com/84dc72f69ac77b137a6b5768b52c7fd2.png)
-* 本当はfleetとかを駆使してクラスタ向けに使う
-* fleet使わない限りcloud-configに書かねばならない
-* immutable感
-* パッケージマネージャなんてない
+* 本当はクラスタ向けのOS
+* fleet使わない限りcloud-configに書く
+    * immutable感
+    * パッケージマネージャなんてない
 
 ---
 #VPS選ぶ
-* Vultr
 * DigitalOcean
-
----
-#Vultr
-* あまり流行ってない
-* 安い(EC2, DigitalOceanとの比較)
-* 近いリージョンある(Tokyo)
-* 増えまくるAPI(だが低機能, シンプル
-* 転送量課金
-* プリペイド
-* CoreOSのドキュメント
+* Vultr
 
 ---
 #DigitalOcean
-* 流行ってるとおもう
-* 近いリージョンある安い
-* 速い(Singapore)
-* CoreOSのチュートリアルがblogに載ってる
+* min: $5/1month, $0.007$/1h
+* 近いリージョンある(Singapore)
+* 転送量課金
+* CoreOSのチュートリアルがblogに載ってて、良い
 
 ---
-# やってみよう(Vultr)
-* demo
-* プラン(OS/region/memory,etc)選択
-* ipxeでCoreOSのバージョン(stable/alpha/beta)選択
+#Vultr
+* min: $5/1month, $0.007$/1h
+* 近いリージョンある(Tokyo)
+* 転送量課金
+* プリペイド
+* 増えまくるAPI(だが低機能, シンプル
 
 ---
-# やってみよう(Vultr) ipxe
+#さくらVPS
+* min: 980yen?/1month
+* 近いリージョン
+* 転送量課金なし(すばらしい)
+* すいません調べてないです
+
+---
+#その他クラウド系
+* ちゃんと調べてないですすみません
+* 高いイメージある
+
+---
+# 2分demo
+## DigitalOceanでcoreos立てる
+* プラン選択
+    - region/memory
+* ipxe指定, boot
+    - CoreOSのバージョンを指定
+        - stable/alpha/beta
+* coreos-install
+    - このときcloud-config
+
+---
+# 2分demo - ipxe
 * VPSから見にいかせる場合はhttpのみ
 * Vultrで手動の場合はペーストでOK
 
