--- a/presen201410.md
+++ b/presen201410.md
@@ -8,7 +8,7 @@
 * Jenkinsたてたcodeは残したい
     * Inflastracture as a Code
     * そこでCoreOS
-* 自作ツールのご紹介
+* demo
 
 ---
 #おうちでの問題
@@ -33,9 +33,9 @@
 ---
 # CI Platforms
 * circleci.com($20)
-    * 論外
+    * うっ
 * travis.com($60)
-    * 論外
+    * うっ
 * wercker.com(beta, $0)
     * 抱いて ////
     * けどbeta(いつか有料?)
@@ -69,15 +69,15 @@
 
 users:
   - name: hoshinotsuyoshi
-    coreos-ssh-import-github: hoshinotsuyoshi
     groups:
       - sudo
       - docker
+    ssh-authorized-keys:
+       - ssh-rsa AAAAB....
 
 ```
 * 最小ではこんな感じ!
 * これでsshできるdockerインスタンスが手に入る!
-* `coreos-ssh-import-github`べんり
 
 ---
 # CoreOSについて
@@ -113,32 +113,55 @@ users:
 ---
 ## Apache httpd service例
 
-![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+```
+[unit]
+Description=My Advanced Service
 
-## Description : systemctlコマンドを打った時に出てくるサービスの説明
-## After: なんのサービスが起動した後にこのサービスが起動するか
+After=docker.service
+```
 
----
-## Apache httpd service例
-
-![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
-
-## TimeoutStartSec : タイムアウト。0はタイムアウトしない。
-
----
-## Apache httpd service例
-
-![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
-
-## ExecStartPre : ExecStartの前に実行される。
-## 上記例ではコンテナ名「apache1」をkillし、削除(rm)し、
-## docker public repoからイメージ"coreos/apache"をpullする
-## `=-`すると終了コードが0以外でも失敗とみなさない
+## Description : 
+## systemctlコマンドを打った時に出てくるサービスの説明
+## After: 
+## なんのサービスが起動した後にこのサービスが起動するか
 
 ---
 ## Apache httpd service例
 
-![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+```
+[Service]
+TimeoutStartSec=0
+
+
+
+ 
+```
+
+## TimeoutStartSec :
+## タイムアウト。0はタイムアウトしない。
+
+---
+## Apache httpd service例
+
+```
+ExecStartPre=-/usr/bin/docker kill apache1
+ExecStartPre=-/usr/bin/docker rm apache1
+ExecStartPre=/usr/bin/docker pull coreos/apache
+
+```
+
+## ExecStartPre :
+## ExecStartの前に実行される。
+## ここではコンテナ名「apache1」をkillし、削除(rm)、
+## docker public repoからイメージ"coreos/apache"をpull
+## 「=-」すると終了コードが0以外でも失敗とみなさない
+
+---
+## Apache httpd service例
+
+```
+ExecStart=/usr/bin/docker run --name apache1 -p 80:80 coreos/apache /usr/sbin/apache2ctl -D FOREGROUND
+```
 
 ## ExecStart : メインのコマンド。 "systemctl start サービス名" で実行される
 ## 上記例ではイメージ「coreos/apache」をコンテナ名「apache1」でrunし、
@@ -147,7 +170,9 @@ users:
 ---
 ## Apache httpd service例
 
-![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
+```
+ExecStop=/usr/bin/docker stop apache1
+```
 
 ## ExecStop : ストップするときのコマンド。 "systemctl stop サービス名" で実行される
 
@@ -155,7 +180,7 @@ users:
 ## これをcloud-configに貼っつければええ!
 ```
   units:
-    - name: httpd.service # 適当に名付ける　
+    - name: httpd.service # 適当に名付ける
       command: start
       runtime: no
       content: |
@@ -178,7 +203,7 @@ users:
 * すっぴん感あるだけに消費メモリも少ない
 
 ---
-# CoreOS良い
+# Vultr/768M plan/CoreOS/すっぴん
 
 ```
 $ free -h
@@ -190,8 +215,7 @@ Swap:           0B         0B         0B
 
 ---
 #CoreOS良い ここまでのまとめ
-![100%](https://i.gyazo.com/84dc72f69ac77b137a6b5768b52c7fd2.png)
-* 本当はクラスタ向けのOS
+* 本当はクラスタ向けのOSなのだが
 * fleet使わない限りcloud-configに書く
     * immutable感
     * パッケージマネージャなんてない
@@ -206,6 +230,8 @@ Swap:           0B         0B         0B
 * min: $5/1month, $0.007$/1h
 * 近いリージョンある(Singapore)
 * 転送量課金
+* paypal選べる
+* API
 * CoreOSのチュートリアルがblogに載ってて、良い
 
 ---
@@ -214,11 +240,11 @@ Swap:           0B         0B         0B
 * 近いリージョンある(Tokyo)
 * 転送量課金
 * プリペイド
-* 増えまくるAPI(だが低機能, シンプル
+* API(だが低機能, シンプル
 
 ---
 #さくらVPS
-* min: 980yen?/1month
+* min: 934yen/1month
 * 近いリージョン
 * 転送量課金なし(すばらしい)
 * すいません調べてないです
@@ -229,39 +255,100 @@ Swap:           0B         0B         0B
 * 高いイメージある
 
 ---
-# 2分demo
+# demo
 ## DigitalOceanでcoreos立てる
-* プラン選択
-    - region/memory
-* ipxe指定, boot
-    - CoreOSのバージョンを指定
-        - stable/alpha/beta
-* coreos-install
-    - このときcloud-config
+* プラン選択(メモリ/転送量/HDD)
+* リージョン選択
+* userdata
+    - cloud-config を貼る!
+* CoreOSのバージョンを指定
+    - alpha/beta/stable
+* ここまで一瞬、あとは待つだけ
 
 ---
-# 2分demo - ipxe
-* VPSから見にいかせる場合はhttpのみ
-* Vultrで手動の場合はペーストでOK
+## プラン選択
+
+![100% inline](https://i.gyazo.com/898aae945fe500193d4d0ddf23f70971.png)
 
 ---
-# やってみよう(Vultr) coreos-install
-* ログイン後、coreos-install
+## リージョン選択 / cloud-configペタリ
+
+![100% inline](https://i.gyazo.com/e5e0bc93e618fe6146e865ce661a3e8e.png)
+
+##### memo: https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
 
 ---
-# やってみよう
-* こんなかんじ
-* Jenkins立てる
-  * cloud-config
-* 立った
+## CoreOSのバージョンを指定 / 鍵を指定
+
+![100% inline](https://i.gyazo.com/cb455ee311218d41dfd7bdb048b448b6.png)
+
+#### DigitalOcean編は以上
 
 ---
-# CoreOS良い
-* 必要だったもの
-  * Dockerfile
-  * cloud-config
+# demo
+## Vultrでcoreos立てる
+* 事前準備:ipxe用意しとく
+* プラン選択リージョン選択
+* coreos-installコマンド + reboot
 
+---
+## 事前準備:ipxe用意しとく(説明割愛、、CoreOSのサイト参照)
 
+![100% inline](https://i.gyazo.com/bbcd3b31abd1d8f1418bfe100572fc88.png)
+
+---
+## プラン選択リージョン選択
+
+![100% inline](https://i.gyazo.com/988c4b9141041fb331f0280a13261954.png)
+
+---
+## さっきのipxe選ぶ, buy
+
+![100% inline](https://gyazo.com/0ec343f93ff478b44b16557e3b22003a.png)
+
+---
+## ipアドレスが決まるまで数十秒待つ
+
+![100% inline](https://i.gyazo.com/925a7f9fae700323dd663a1a466e5a38.png)
+
+---
+## coreos-installコマンド + reboot
+
+```
+$ ssh core@IPアドレス
+
+cd ~ && \
+curl -L https://gistかなんかに貼っとく/cloud-config.yaml > ~/config &&  \
+sudo coreos-install -d /dev/vda -C alpha -c ~/config -o '' && \
+sudo mount -o subvol=root /dev/vda9 /mnt/ && \
+sudo reboot
+
+```
+
+##### 「-o '' 」しないとできなかった（はまった）
+
+#### Vultr編は以上
+
+---
+## hello my service!
+
+### もしかして：jenkinsじゃなくても任意のサービスが起動できる!
+
+---
+## systemd : 叩くと楽しいかもしれないコマンド
+
+* sudo systemctl service hoge
+    * サービスの状態がわかる
+* systemd-analyze plot > file.svg
+
+---
+# 必要だったもの
+* cloud-config
+* docker image
+
+#### https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
+#### https://github.com/hoshinotsuyoshi/dind-jenkins
+#### https://github.com/hoshinotsuyoshi/dind-jenkins-auto-build-ruby
 
 
 ---
