--- a/presen201410.md
+++ b/presen201410.md
@@ -342,45 +342,46 @@ sudo reboot
 * systemd-analyze plot > file.svg
 
 ---
-# 必要だったもの
-* cloud-config
+# jenkins立てるのに必要だったもの
 * docker image
+* cloud-config
 
-#### https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
 #### https://github.com/hoshinotsuyoshi/dind-jenkins
 #### https://github.com/hoshinotsuyoshi/dind-jenkins-auto-build-ruby
+#### https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
+
+---
+# 今回作ったdocker imageのポイント
+
+* githubとdocker hub連携させた
+* 「AUTOMATED BUILD REPOSITORY」というのが便利
+* 指定のブランチにプッシュすると自動的にビルドしてくれる
+* おうちのパソコンでビルドしなくていい
+
+---
+# 今回作ったdocker imageのポイント
+
+* 1,まずjenkinsとその中でdockerが動くイメージを作成
+    * この「dockerの中でdockerが動く」は個人的な趣味
+    * jenkinsでdocker buildのテストをしたいから
+    * `FROM jpetazzo/dind` てすればうごく
+
+---
+# 今回作ったdocker imageのポイント
+
+* 2,1のイメージをFROM
+    * rubyを入れたイメージを作成
+    * その中で`ONBUILD ADD jenkinsの設定ファイル`
+
+---
+# 今回作ったdocker imageのポイント
+* 3,2のイメージをFROM
+    * CoreOS起動時にjenkinsの設定ファイルを作成
+
+---
+# cloud-config
 
 
 ---
-# メモ置き場
----
-# CoreOS良い
-* 何がいいの？
-* "cloud-config"でサーバーまるごとイミュータブルに書ける
-* AUTOMATED BUILD REPOSITORY便利
-
----
-# CoreOS良い
-* Rakeで使わない時ストップすることで夢が広がる
-* `*/5 8-20 * * 1-5`
-* `0 1 * * 6` #起動のみ
-* 苦しみ
-* 貧者のCI
-
-Server-Bootstrap-Vultr　つくった
-Ace.js
-ActionController::Live
-heroku fork
-* できないこと is めっちゃおおい
-* toolbox
-    * 悠然とfedoraのイメージが入り、びびる
-* ぜんぶコンテナの中でやる
-* docker メモリ制御
-* docker cpu share
-
-
-
---link
-docker create
-
+# スライド終わり
 
