--- a/presen201410.md
+++ b/presen201410.md
@@ -32,9 +32,9 @@
 
 ---
 # CI Platforms
-* circleci.com($20)
+* circleci.com($19/mo~)
     * うっ
-* travis.com($60)
+* travis.com(pro: $129/mo)
     * うっ
 * wercker.com(beta, $0)
     * 抱いて ////
@@ -351,7 +351,7 @@ sudo reboot
 #### https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
 
 ---
-# 今回作ったdocker imageのポイント
+# docker と github
 
 * githubとdocker hub連携させた
 * 「AUTOMATED BUILD REPOSITORY」というのが便利
@@ -359,28 +359,43 @@ sudo reboot
 * おうちのパソコンでビルドしなくていい
 
 ---
-# 今回作ったdocker imageのポイント
+# 今回作ったdocker image(1)
 
-* 1,まずjenkinsとその中でdockerが動くイメージを作成
-    * この「dockerの中でdockerが動く」は個人的な趣味
+* jenkinsとdockerが動くイメージを作成
+    * (dockerの中でdockerが動く」は個人的趣味)
     * jenkinsでdocker buildのテストをしたいから
-    * `FROM jpetazzo/dind` てすればうごく
+    * `FROM jpetazzo/dind`
+
+#### https://github.com/hoshinotsuyoshi/dind-jenkins
 
 ---
-# 今回作ったdocker imageのポイント
+# 今回作ったdocker image(2)
 
-* 2,1のイメージをFROM
-    * rubyを入れたイメージを作成
-    * その中で`ONBUILD ADD jenkinsの設定ファイル`
+* (1)のイメージをFROMしrubyを入れたイメージを作成
+* 「ONBUILD」 使ってみた
+    * 子ビルドのビルド時のコマンドを指定できる
+* `ONBUILD ADD config.xml`
+* template methodっぽい
+
+#### https://github.com/hoshinotsuyoshi/dind-jenkins-auto-build-ruby
 
 ---
-# 今回作ったdocker imageのポイント
-* 3,2のイメージをFROM
+# 今回作ったdocker image(3)
+* (2)のイメージをFROM
     * CoreOS起動時にjenkinsの設定ファイルを作成
 
 ---
-# cloud-config
+# 所感
 
+サンデープログラマはherokuとかで
+起動をスクリプト化しておけば
+
+```
+00 00 * * 6 rake:start-jenkins
+59 23 * * 7 rake:kill-jenkins
+```
+
+さらに節約できると思いました
 
 ---
 # スライド終わり
