--- a/presen201410.md
+++ b/presen201410.md
@@ -194,7 +194,7 @@ ExecStop=/usr/bin/docker stop apache1
 * つまり
 
 ---
-![350% inline](https://i.gyazo.com/5735922e586153a2c3773cc8371bcac3.png)
+![150% inline](https://i.gyazo.com/08c94306b9fb627c2d6d51a9f3177b88.png)
 
 ---
 # CoreOS良い
@@ -391,12 +391,13 @@ sudo reboot
 起動をスクリプト化しておけば
 
 ```
-00 00 * * 6 rake:start-jenkins
-59 23 * * 7 rake:kill-jenkins
+00 00 * * 6 rake:start_jenkins
+59 23 * * 7 rake:kill_jenkins
 ```
 
 さらに節約できると思いました
 
 ---
-# スライド終わり
+# 終わり
+
 
