--- a/presen201410.md
+++ b/presen201410.md
@@ -1,41 +1,33 @@
-## 貧者のためのCoreOSとJenkins
+## 貧者のためのCoreOS(Jenkinsを例に)
 ### 技術チーム勉強会 #205
+### 2014/10/31
 
 ---
-#今日話すこと
-* 貧者だけどCI環境ほしい
-* 貧者なのでお金払いたくない
-* Jenkinsたてたcodeは残したい
-    * Inflastracture as a Code
-    * そこでCoreOS
-* demo
-
----
-#おうちでの問題
+# ところで
 * おうちでCIできますか？
 
 ---
-#おうちにはアレがない
+# おうちにはアレがない
 * サーバー
 * 上記を置くスペース
 * 上記に対する家族の理解
 
 ---
-#おうちにはアレがない
+# おうちにはアレがない
 * メモリ
 ![100%](https://i.gyazo.com/84b91b8f05fbd08d5967a425378110da.png)
 * VirtualBoxとか嫌なんや
 
 ---
-#おうちにはアレがない
+# おうちにはアレがない
 * お金
 
 ---
-# CI Platforms
-* circleci.com($19/mo~)
-    * うっ
-* travis.com(pro: $129/mo)
-    * うっ
+# CI Platforms(private plan)
+* circleci.com
+    * うっ(有料)
+* travis.com
+    * うっ(有料)
 * wercker.com(beta, $0)
     * 抱いて ////
     * けどbeta(いつか有料?)
@@ -43,27 +35,23 @@
 ---
 # CI Platforms(考察)
 * wercker良さそうですね
-    * けどそれじゃ面白くないし
+    * けどそれじゃ面白くないし勉強会にならない
 * やっぱVPSにJenkinsを立てよう
     * 修羅の道へ
 
 ---
 # 修羅の道だが、1つの切なる願い
 * Jenkinsたてたcodeは残したいんや
-* Inflastracture as a Code
-* さくっとやりたい
+* そこでCoreOS の cloud-config!!
+    * サーバーの初期設定をyamlで書ける
 
 ---
-# Jenkinsたてたcodeは残したいんや
-* CoreOS の cloud-configよさそう
-* インスタンスの初期設定をyamlで書ける
+# CoreOSのcloud-configとは
+
+![100% inline](https://i.gyazo.com/6a3c3d5cb44c06a261ff3ec4eeb4ca3d.png)
 
 ---
-
-![100%](https://i.gyazo.com/6a3c3d5cb44c06a261ff3ec4eeb4ca3d.png)
-
----
-# CoreOSのcloud-config
+# CoreOSのcloud-configとは
 ```
 #cloud-config
 
@@ -104,14 +92,14 @@ users:
 ![80% inline](https://i.gyazo.com/8163167cffe107b9795b3bc8dab91f10.png)
 
 ---
-## Apache httpd service例
+# cloud-config: Apache httpd service例
 
 ![120% inline](https://i.gyazo.com/2dc756b6d1b192845c3b8ec7571f821f.png)
 
-### 簡便のためetcd関連は削除しています
+#### 簡便のためetcd関連は削除しています
 
 ---
-## Apache httpd service例
+# cloud-config: Apache httpd service例
 
 ```
 [unit]
@@ -123,25 +111,10 @@ After=docker.service
 ## Description : 
 ## systemctlコマンドを打った時に出てくるサービスの説明
 ## After: 
-## なんのサービスが起動した後にこのサービスが起動するか
+## どのサービスが起動した後にこのサービスが起動するか
 
 ---
-## Apache httpd service例
-
-```
-[Service]
-TimeoutStartSec=0
-
-
-
- 
-```
-
-## TimeoutStartSec :
-## タイムアウト。0はタイムアウトしない。
-
----
-## Apache httpd service例
+# cloud-config: Apache httpd service例
 
 ```
 ExecStartPre=-/usr/bin/docker kill apache1
@@ -157,27 +130,30 @@ ExecStartPre=/usr/bin/docker pull coreos/apache
 ## 「=-」すると終了コードが0以外でも失敗とみなさない
 
 ---
-## Apache httpd service例
+# cloud-config: Apache httpd service例
 
 ```
-ExecStart=/usr/bin/docker run --name apache1 -p 80:80 coreos/apache /usr/sbin/apache2ctl -D FOREGROUND
+ExecStart=/usr/bin/docker run --name apache1 \
+  -p 80:80 coreos/apache /usr/sbin/apache2ctl -D FOREGROUND
 ```
 
-## ExecStart : メインのコマンド。 "systemctl start サービス名" で実行される
+## ExecStart : 
+## メインのコマンド。 "systemctl start サービス名" で実行される。
 ## 上記例ではイメージ「coreos/apache」をコンテナ名「apache1」でrunし、
 ## コンテナの中の話なのでFOREGROUNDを指定している
 
 ---
-## Apache httpd service例
+# cloud-config: Apache httpd service例
 
 ```
 ExecStop=/usr/bin/docker stop apache1
 ```
 
-## ExecStop : ストップするときのコマンド。 "systemctl stop サービス名" で実行される
+## ExecStop : 
+## ストップするときのコマンド。 "systemctl stop サービス名" で実行される
 
 ---
-## これをcloud-configに貼っつければええ!
+# これをcloud-configに貼っつければええ!
 ```
   units:
     - name: httpd.service # 適当に名付ける
@@ -202,9 +178,6 @@ ExecStop=/usr/bin/docker stop apache1
 * ボス戦向け(本気)っぽい
 * すっぴん感あるだけに消費メモリも少ない
 
----
-# Vultr/768M plan/CoreOS/すっぴん
-
 ```
 $ free -h
              total       used       free     shared    buffers     cached
@@ -213,21 +186,16 @@ Mem:          746M       144M       601M       248K       4.3M        92M
 Swap:           0B         0B         0B
 ```
 
----
-#CoreOS良い ここまでのまとめ
-* 本当はクラスタ向けのOSなのだが
-* fleet使わない限りcloud-configに書く
-    * immutable感
-    * パッケージマネージャなんてない
+### (Vultr/768M の場合)
 
 ---
-#VPS選ぶ
+# CoreOSを動かせるVPSのご紹介
 * DigitalOcean
 * Vultr
 
 ---
 #DigitalOcean
-* min: $5/1month, $0.007$/1h
+* min: $7/mon, $0.01/1h
 * 近いリージョンある(Singapore)
 * 転送量課金
 * paypal選べる
@@ -236,27 +204,21 @@ Swap:           0B         0B         0B
 
 ---
 #Vultr
-* min: $5/1month, $0.007$/1h
+* min: $5/mon, $0.007/1h
 * 近いリージョンある(Tokyo)
 * 転送量課金
 * プリペイド
-* API(だが低機能, シンプル
+* API
+* CoreOSの公式サイトにチュートリアル載ってる
 
 ---
-#さくらVPS
-* min: 934yen/1month
-* 近いリージョン
-* 転送量課金なし(すばらしい)
-* すいません調べてないです
-
----
-#その他クラウド系
+# (その他のVPSやクラウド系は...)
 * ちゃんと調べてないですすみません
 * 高いイメージある
 
 ---
-# demo
-## DigitalOceanでcoreos立てる
+# demo1 : DigitalOceanでcoreos立てる
+【流れ】
 * プラン選択(メモリ/転送量/HDD)
 * リージョン選択
 * userdata
@@ -266,11 +228,13 @@ Swap:           0B         0B         0B
 * ここまで一瞬、あとは待つだけ
 
 ---
+# demo1 : DigitalOceanでCoreOS立てる
 ## プラン選択
 
 ![100% inline](https://i.gyazo.com/898aae945fe500193d4d0ddf23f70971.png)
 
 ---
+# demo1 : DigitalOceanでCoreOS立てる
 ## リージョン選択 / cloud-configペタリ
 
 ![100% inline](https://i.gyazo.com/e5e0bc93e618fe6146e865ce661a3e8e.png)
@@ -278,41 +242,50 @@ Swap:           0B         0B         0B
 ##### memo: https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
 
 ---
+# demo1 : DigitalOceanでCoreOS立てる
 ## CoreOSのバージョンを指定 / 鍵を指定
 
 ![100% inline](https://i.gyazo.com/cb455ee311218d41dfd7bdb048b448b6.png)
 
-#### DigitalOcean編は以上
+# DigitalOcean編は以上。
 
 ---
-# demo
-## Vultrでcoreos立てる
-* 事前準備:ipxe用意しとく
-* プラン選択リージョン選択
+# demo2 : VultrでCoreOS立てる
+【流れ】
+* ipxe用意しとく
+* プラン選択 ・ リージョン選択
 * coreos-installコマンド + reboot
 
 ---
-## 事前準備:ipxe用意しとく(説明割愛、、CoreOSのサイト参照)
+# demo2 : VultrでCoreOS立てる
+## 事前準備:ipxe用意しとく
 
 ![100% inline](https://i.gyazo.com/bbcd3b31abd1d8f1418bfe100572fc88.png)
 
+#### スクリプトはCoreOSのサイトからコピーしてくる
+#### https://coreos.com/docs/running-coreos/cloud-providers/vultr/
+
 ---
+# demo2 : VultrでCoreOS立てる
 ## プラン選択リージョン選択
 
 ![100% inline](https://i.gyazo.com/988c4b9141041fb331f0280a13261954.png)
 
 ---
-## さっきのipxe選ぶ, buy
+# demo2 : VultrでCoreOS立てる
+## さっきのipxe選び, deployボタンを押す
 
 ![100% inline](https://gyazo.com/0ec343f93ff478b44b16557e3b22003a.png)
 
 ---
+# demo2 : VultrでCoreOS立てる
 ## ipアドレスが決まるまで数十秒待つ
 
 ![100% inline](https://i.gyazo.com/925a7f9fae700323dd663a1a466e5a38.png)
 
 ---
-## coreos-installコマンド + reboot
+# demo2 : VultrでCoreOS立てる
+## sshして coreos-installコマンド
 
 ```
 $ ssh core@IPアドレス
@@ -325,36 +298,39 @@ sudo reboot
 
 ```
 
-##### 「-o '' 」しないとできなかった（はまった）
+##### 「-o '' 」する必要あり（はまった）
 
 #### Vultr編は以上
 
 ---
-## hello my service!
+# hello my Jenkins!
 
-### もしかして：jenkinsじゃなくても任意のサービスが起動できる!
+### DigitalOceanでもVultrでも同じcloud-configで同じようにJenkinsが動いた！
 
----
-## systemd : 叩くと楽しいかもしれないコマンド
+![70%, inline, center](https://i.gyazo.com/c64f5262a91a8711555af19aacad959c.png)
 
-* sudo systemctl service hoge
-    * サービスの状態がわかる
-* systemd-analyze plot > file.svg
+### (↑カスタムジョブ(job1)がすでにセットされている状態で起動できた!)
 
 ---
-# jenkins立てるのに必要だったもの
+## もしかして：jenkinsじゃなくても任意のサービスが起動できる!
+
+#### (そうです！)
+
+---
+# 今回jenkins立てるのに必要だったもの
 * docker image
+
+### https://github.com/hoshinotsuyoshi/dind-jenkins
+### https://github.com/hoshinotsuyoshi/dind-jenkins-auto-build-ruby
+
 * cloud-config
 
-#### https://github.com/hoshinotsuyoshi/dind-jenkins
-#### https://github.com/hoshinotsuyoshi/dind-jenkins-auto-build-ruby
-#### https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
+### https://gist.github.com/hoshinotsuyoshi/8d3dc38d50c61c1b6cd3
 
 ---
 # docker と github
 
-* githubとdocker hub連携させた
-* 「AUTOMATED BUILD REPOSITORY」というのが便利
+* githubとdocker hub連携させた「AUTOMATED BUILD REPOSITORY」というのが便利
 * 指定のブランチにプッシュすると自動的にビルドしてくれる
 * おうちのパソコンでビルドしなくていい
 
@@ -366,7 +342,7 @@ sudo reboot
     * jenkinsでdocker buildのテストをしたいから
     * `FROM jpetazzo/dind`
 
-#### https://github.com/hoshinotsuyoshi/dind-jenkins
+### https://github.com/hoshinotsuyoshi/dind-jenkins
 
 ---
 # 今回作ったdocker image(2)
@@ -377,7 +353,7 @@ sudo reboot
 * `ONBUILD ADD config.xml`
 * template methodっぽい
 
-#### https://github.com/hoshinotsuyoshi/dind-jenkins-auto-build-ruby
+### https://github.com/hoshinotsuyoshi/dind-jenkins-auto-build-ruby
 
 ---
 # 今回作ったdocker image(3)
@@ -385,19 +361,13 @@ sudo reboot
     * CoreOS起動時にjenkinsの設定ファイルを作成
 
 ---
-# 所感
+# 所感/まとめ
 
-サンデープログラマはherokuとかで
-起動をスクリプト化しておけば
-
-```
-00 00 * * 6 rake:start_jenkins
-59 23 * * 7 rake:kill_jenkins
-```
-
-さらに節約できると思いました
+* cloud-configでラクチンテスト環境構築！
+* CoreOSをサポートするVPSは安いプランがある
+* こまめにdestroyすればさらに節約できそう
 
 ---
-# 終わり
+# ご清聴ありがとうございました
 
 
